[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/fonts/alfa_slab_one.tres" type="DynamicFont" id=1]
[ext_resource path="res://scenes/ui/EventSlider.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/textures/ui/yellow_bar.png" type="Texture" id=3]
[ext_resource path="res://resources/fonts/display_buttons.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/ui/FatedUI.gd" type="Script" id=5]

[node name="FatedUI" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 40.0
margin_right = -40.0
margin_bottom = -40.0
script = ExtResource( 5 )

[node name="Header" type="HBoxContainer" parent="."]
margin_right = 944.0
margin_bottom = 62.0

[node name="Reset" type="Button" parent="Header"]
margin_right = 86.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 4 )
text = "Reset"
flat = true

[node name="Title" type="Label" parent="Header"]
margin_left = 90.0
margin_right = 850.0
margin_bottom = 62.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 1 )
text = "Fated events"
align = 1
valign = 1

[node name="Start" type="Button" parent="Header"]
margin_left = 854.0
margin_right = 944.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 4 )
text = "Begin"

[node name="PointsLabel" type="Label" parent="."]
margin_top = 66.0
margin_right = 944.0
margin_bottom = 80.0

[node name="PointsBar" type="TextureProgress" parent="."]
margin_top = 84.0
margin_right = 944.0
margin_bottom = 112.0
rect_min_size = Vector2( 0, 28 )
value = 100.0
texture_progress = ExtResource( 3 )
nine_patch_stretch = true
stretch_margin_left = 32
stretch_margin_top = 12
stretch_margin_right = 32
stretch_margin_bottom = 12

[node name="EventBox" type="VBoxContainer" parent="."]
margin_top = 116.0
margin_right = 944.0
margin_bottom = 560.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EventSlider" parent="EventBox" instance=ExtResource( 2 )]
margin_right = 944.0
margin_bottom = 40.0

[node name="EventSlider2" parent="EventBox" instance=ExtResource( 2 )]
margin_top = 44.0
margin_right = 944.0
margin_bottom = 84.0

[connection signal="pressed" from="Header/Reset" to="." method="_on_Reset_pressed"]
[connection signal="pressed" from="Header/Start" to="." method="_on_Start_pressed"]
